--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <html>
 	<body>
-		<h1>All the power is within you</h1>
+		<h1>All the power is within you. You can do anything you anything and everything.</h1>
 	</body>
 </html>
