--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html>
 	<body>
 		<h1>All the power is within you. You can do anything you anything and everything.</h1>
-		<h2>You are the creator of your </h2>
+		<h2>You are the creator of your destiny. Go ahead and create it!</h2>
 	</body>
 </html>
