--- a/index.html
+++ b/index.html
@@ -2,6 +2,6 @@
 	<body>
 		<h1>All the power is within you. You can do anything you anything and everything.</h1>
 		<h2>You are the creator of your destiny</h2>
-		<h3>Faith faith faith, faith in self; faith in God</h3>
+		<h3>Faith faith faith, faith in self; faith in God is great but 6 focus sessions per day will make you wealthy!</h3>
 	</body>
 </html>
