--- a/index.html
+++ b/index.html
@@ -3,5 +3,6 @@
 		<h1>All the power is within you.</h1>
 		<h2>You are the creator of your destiny</h2>
 		<h3>Faith faith faith, faith in self; faith in God is great but 6 focus sessions per day will make you wealthy!</h3>
+		oasfpaso;fihj;ih
 	</body>
 </html>
